--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,13 @@ html {
 	scroll-behavior: smooth;
 }
 
+#chart {
+	background-color: #ffffff;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	border-radius: 8px;
+	padding: 20px;
+}
+
 /* Scrollbar width */
 ::-webkit-scrollbar {
     width: 12px;
